# uibk-acc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  \  boost_install.sh  clang-format.cmake  cppcheck.cmake  run_bench.sh
benchmarks/: .gitignore  dot_product.c  fib_const.c  fib_input.c  make.sh  pi_iter.c  pi_rec.c  sort.c
libmc/: .gitignore  CMakeLists.txt
libmc/include/: ast.h  basics.h  parser.h  stream_utils.h  string_utils.h  test_utils.h
libmc/src/: ast.cpp  parser.cpp  stream_utils.cpp  string_utils.cpp
mcc/: .gitignore  CMakeLists.txt  Makefile  array.mC  fibonacci.mC  fibonacci_benchmark.mC  lib.c  node_cases.mC  sum.mC  sum_benchmark.mC  test.mC  using_lib.mC
mcc/cfg/: CMakeLists.txt
mcc/cfg/include/mcc/cfg/: cfg.h  set_helper.h  static_call_graph.h  sub_expression.h
mcc/cfg/src/: cfg.cpp  static_call_graph.cpp  sub_expression.cpp
mcc/gas/: CMakeLists.txt
mcc/gas/include/mcc/gas/: gas.h  mnemonic.h  operand.h  register_manager.h  x86_instruction_set.h
mcc/gas/include/mcc/gas/helper/: tac_converters.h  tac_float_converters.h  tac_int_converters.h
mcc/gas/src/: gas.cpp  mnemonic.cpp  operand.cpp  register_manager.cpp
mcc/gas/src/helper/: tac_converters.cpp  tac_float_converters.cpp  tac_int_converters.cpp
mcc/include/mcc/: main.h
mcc/lvn/: CMakeLists.txt
mcc/lvn/include/mcc/lvn/: lvn.h
mcc/lvn/src/: lvn.cpp
mcc/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
mcc/src/: main.cc  main.cpp
mcc/tac/: CMakeLists.txt
mcc/tac/include/mcc/tac/: array.h  array_access.h  basic_block.h  float_literal.h  int_literal.h  label.h  operand.h  operator.h  scope.h  scope_manager.h  scope_node.h  tac.h  triple.h  type.h  variable.h  variable_store.h
mcc/tac/include/mcc/tac/helper/: ast_converters.h
mcc/tac/src/: array.cpp  array_access.cpp  basic_block.cpp  float_literal.cpp  int_literal.cpp  label.cpp  operand.cpp  operator.cpp  scope.cpp  scope_manager.cpp  scope_node.cpp  tac.cpp  triple.cpp  variable.cpp  variable_store.cpp
mcc/tac/src/helper/: ast_converters.cpp
mcc/test/: main_test.cpp  mc_tests.cpp  test.mC  test.mC.s
mcc/test/cfg/: cfg_tests.cpp  scg_tests.cpp  set_helper_tests.cpp  sub_expression_tests.cpp
mcc/test/gas/: array_convert_tests.cpp  gas_tests.cpp  register_manager_tests.cpp
mcc/test/lvn/: lvn_tests.cpp
mcc/test/tac/: array_access_tests.cpp  array_tests.cpp  basic_block_tests.cpp  float_literal_tests.cpp  function_tests.cpp  int_literal_tests.cpp  label_tests.cpp  operator_tests.cpp  scope_manager_tests.cpp  scope_node_tests.cpp  scope_tests.cpp  tac_tests.cpp  triple_tests.cpp  var_table_test.cpp  variable_store_tests.cpp  variable_tests.cpp
